// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPropsTransform should transform component props 1`] = `
.c0 {
  background-color: #fff;
}

<div
  class="default-prefix-disabled default-prefix-size-lg c0"
  disabled=""
/>
`;

exports[`createPropsTransform should transform component props with specified \`props\` 1`] = `
.c0 {
  background-color: #fff;
}

<div
  class="test-disabled test-size-lg c0"
  disabled=""
  type="primary"
/>
`;
